prevent wrap in likes & watchs timeline

--- a/app/styles/dependencies/mixins.scss
+++ b/app/styles/dependencies/mixins.scss
@@ -112,11 +112,18 @@
         flex-basis: 150px;
         flex-shrink: 0;
         justify-content: flex-end;
+        .list-itemtype-track-likers {
+            margin-right: .5rem;
+        }
     }
     .list-itemtype-track-likers,
     .list-itemtype-track-watchers {
-        display: inline-block;
-        width: 2.5rem;
+        display: flex;
+        .icon {
+            display: block;
+            margin-right: .2rem;
+            width: 16px;
+        }
         &.active {
             color: $primary;
             path {
